syntax = "proto3";

package learning;

option go_package = "github.com/amityadav/landr/pkg/pb/learning";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service LearningService {
  rpc AddMaterial(AddMaterialRequest) returns (AddMaterialResponse);
  rpc DeleteMaterial(DeleteMaterialRequest) returns (google.protobuf.Empty);
  rpc GetDueMaterials(GetDueMaterialsRequest) returns (GetDueMaterialsResponse);
  rpc GetDueFlashcards(GetDueFlashcardsRequest) returns (FlashcardList);
  rpc CompleteReview(CompleteReviewRequest) returns (google.protobuf.Empty);
  rpc FailReview(FailReviewRequest) returns (google.protobuf.Empty);
  rpc GetAllTags(google.protobuf.Empty) returns (GetAllTagsResponse);
  rpc GetNotificationStatus(google.protobuf.Empty) returns (NotificationStatusResponse);
  rpc GetMaterialSummary(GetMaterialSummaryRequest) returns (GetMaterialSummaryResponse);
  rpc UpdateFlashcard(UpdateFlashcardRequest) returns (google.protobuf.Empty);
}

message AddMaterialRequest {
  string type = 1; // "TEXT", "LINK", or "IMAGE"
  string content = 2;
  repeated string existing_tags = 3;
  string image_data = 4; // Base64 encoded image for IMAGE type
}

message AddMaterialResponse {
  string material_id = 1;
  int32 flashcards_created = 2;
  string title = 3;
  repeated string tags = 4;
}

message DeleteMaterialRequest {
  string material_id = 1;
}

message MaterialSummary {
  string id = 1;
  string title = 2;
  int32 due_count = 3;
  repeated string tags = 4;
}

message GetDueMaterialsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message GetDueMaterialsResponse {
  repeated MaterialSummary materials = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
  int32 total_pages = 5;
}

message GetDueFlashcardsRequest {
  string material_id = 1;
}

message Flashcard {
  string id = 1;
  string question = 2;
  string answer = 3;
  int32 stage = 4;
  google.protobuf.Timestamp next_review_at = 5;
  string material_title = 6;
  repeated string tags = 7;
}

message FlashcardList {
  repeated Flashcard flashcards = 1;
}

message CompleteReviewRequest {
  string flashcard_id = 1;
}

message FailReviewRequest {
  string flashcard_id = 1;
}

message GetAllTagsResponse {
  repeated string tags = 1;
}

message NotificationStatusResponse {
  int32 due_flashcards_count = 1;
  bool has_due_materials = 2;
}

message GetMaterialSummaryRequest {
  string material_id = 1;
}

message GetMaterialSummaryResponse {
  string summary = 1;
  string title = 2;
}

message UpdateFlashcardRequest {
  string flashcard_id = 1;
  string question = 2;
  string answer = 3;
}
